--- a/app/src/main/res/layout/activity_my_365.xml
+++ b/app/src/main/res/layout/activity_my_365.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fresco="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_my_365"
@@ -11,6 +11,7 @@
     tools:context="com.example.huichuanyi.ui.activity.My_365Activity">
 
     <RelativeLayout
+        android:id="@+id/rl_top"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="@color/color_ac0000">
@@ -26,133 +27,136 @@
             android:textSize="@dimen/text_size_18" />
     </RelativeLayout>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="@dimen/distance_10"
-        android:orientation="vertical">
+        android:layout_above="@+id/btn_chat_with_manager"
+        android:layout_below="@+id/rl_top">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/hm_background"
-            android:padding="@dimen/distance_10">
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/distance_10"
+            android:orientation="vertical">
 
-            <com.facebook.drawee.view.SimpleDraweeView
-                android:id="@+id/sv_user_photo"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                fresco:actualImageScaleType="fitXY"
-                fresco:failureImage="@mipmap/stand"
-                fresco:placeholderImage="@mipmap/stand"
-                fresco:roundAsCircle="true" />
-
-            <TextView
-                android:id="@+id/tv_user_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/distance_10"
-                android:layout_toRightOf="@+id/sv_user_photo" />
-
-            <TextView
-                android:id="@+id/tv_uesr_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/tv_user_name"
-                android:layout_marginLeft="@dimen/distance_10"
-                android:layout_marginTop="@dimen/distance_10"
-                android:layout_toRightOf="@+id/sv_user_photo"
-                android:textColor="@color/color_ac0000" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/distance_20"
-            android:background="@drawable/hm_background">
-
-
-            <TextView
-                android:id="@+id/tv_365_studio"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_marginLeft="@dimen/distance_10"
-                android:padding="@dimen/distance_10"
-                android:text="服务工作室"
-                android:textSize="@dimen/text_size_18" />
-
-            <TextView
-                android:id="@+id/tv_365_line"
+            <RelativeLayout
+                android:id="@+id/rl"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_below="@+id/tv_365_studio"
-                android:background="@color/back_ground" />
-
-            <TextView
-                android:id="@+id/tv_studio_name"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/tv_365_line"
-                android:layout_marginLeft="@dimen/distance_10"
-                android:layout_marginTop="@dimen/distance_10"
-                android:layout_toRightOf="@+id/sv_studio_logo" />
+                android:background="@drawable/hm_background"
+                android:padding="@dimen/distance_10">
 
-            <TextView
-                android:id="@+id/tv_studio_is_open"
-                android:layout_width="wrap_content"
+                <com.facebook.drawee.view.SimpleDraweeView
+                    android:id="@+id/sv_user_photo"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    fresco:actualImageScaleType="fitXY"
+                    fresco:failureImage="@mipmap/stand"
+                    fresco:placeholderImage="@mipmap/stand"
+                    fresco:roundAsCircle="true" />
+
+                <TextView
+                    android:id="@+id/tv_user_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/distance_10"
+                    android:layout_toRightOf="@+id/sv_user_photo" />
+
+                <TextView
+                    android:id="@+id/tv_uesr_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tv_user_name"
+                    android:layout_marginLeft="@dimen/distance_10"
+                    android:layout_marginTop="@dimen/distance_10"
+                    android:layout_toRightOf="@+id/sv_user_photo"
+                    android:textColor="@color/color_ac0000" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/tv_studio_name"
-                android:layout_marginLeft="@dimen/distance_10"
-                android:layout_marginTop="@dimen/distance_10"
-                android:layout_toRightOf="@+id/sv_studio_logo"
-                android:textColor="@color/color_ac0000" />
+                android:layout_below="@id/rl"
+                android:layout_marginTop="@dimen/distance_20"
+                android:background="@drawable/hm_background">
 
-            <TextView
-                android:id="@+id/tv_365_studio_infos"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/sv_studio_logo"
-                android:layout_margin="@dimen/distance_10"
-                android:text="工作室详情" />
+                <TextView
+                    android:id="@+id/tv_365_studio"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginLeft="@dimen/distance_10"
+                    android:padding="@dimen/distance_10"
+                    android:text="服务工作室"
+                    android:textSize="@dimen/text_size_18" />
 
-            <TextView
-                android:id="@+id/tv_365_studio_info"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/tv_365_studio_infos"
-                android:layout_marginBottom="@dimen/distance_10"
-                android:layout_marginLeft="@dimen/distance_10"
-                android:layout_marginRight="@dimen/distance_10" />
+                <TextView
+                    android:id="@+id/tv_365_line"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_below="@+id/tv_365_studio"
+                    android:background="@color/back_ground" />
 
-            <com.facebook.drawee.view.SimpleDraweeView
-                android:id="@+id/sv_studio_logo"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignTop="@+id/tv_studio_name"
-                android:layout_marginLeft="@dimen/distance_10"
-                fresco:actualImageScaleType="fitCenter"
-                fresco:failureImage="@mipmap/stand"
-                fresco:placeholderImage="@mipmap/stand"
-                fresco:roundAsCircle="true" />
+                <TextView
+                    android:id="@+id/tv_studio_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tv_365_line"
+                    android:layout_marginLeft="@dimen/distance_10"
+                    android:layout_marginTop="@dimen/distance_10"
+                    android:layout_toRightOf="@+id/sv_studio_logo" />
+
+                <TextView
+                    android:id="@+id/tv_studio_is_open"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tv_studio_name"
+                    android:layout_marginLeft="@dimen/distance_10"
+                    android:layout_marginTop="@dimen/distance_10"
+                    android:layout_toRightOf="@+id/sv_studio_logo"
+                    android:textColor="@color/color_ac0000" />
+
+                <TextView
+                    android:id="@+id/tv_365_studio_infos"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/sv_studio_logo"
+                    android:layout_margin="@dimen/distance_10"
+                    android:text="工作室详情" />
+
+                <TextView
+                    android:id="@+id/tv_365_studio_info"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tv_365_studio_infos"
+                    android:layout_marginBottom="@dimen/distance_10"
+                    android:layout_marginLeft="@dimen/distance_10"
+                    android:layout_marginRight="@dimen/distance_10"
+                    android:lines="4" />
+
+                <com.facebook.drawee.view.SimpleDraweeView
+                    android:id="@+id/sv_studio_logo"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignTop="@+id/tv_studio_name"
+                    android:layout_marginLeft="@dimen/distance_10"
+                    fresco:actualImageScaleType="fitCenter"
+                    fresco:failureImage="@mipmap/stand"
+                    fresco:placeholderImage="@mipmap/stand"
+                    fresco:roundAsCircle="true" />
+
+            </RelativeLayout>
+
+
         </RelativeLayout>
-    </LinearLayout>
+    </ScrollView>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@color/color_ac0000">
+    <Button
+        android:id="@+id/btn_chat_with_manager"
+        style="@style/button_sure"
+        android:layout_alignParentBottom="true"
+        android:onClick="onClick"
+        android:text="和您的私人管理师聊一聊" />
 
-        <include layout="@layout/btn_back"></include>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="我的365"
-            android:textColor="@color/main_color_write"
-            android:textSize="@dimen/text_size_big" />
-    </RelativeLayout>
-
-</LinearLayout>
+</RelativeLayout>
