--- a/app/src/main/res/layout/activity_ly_buy.xml
+++ b/app/src/main/res/layout/activity_ly_buy.xml
@@ -50,7 +50,8 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:background="@drawable/shape_write_8dp"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:padding="10dp">
 
                     <ImageView
                         android:id="@+id/iv_lybuy_shop_logo"
@@ -176,9 +177,9 @@
                                 android:id="@+id/tv_lybuy_introduce"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginLeft="10dp"
                                 android:layout_alignParentBottom="true"
                                 android:layout_marginBottom="15dp"
+                                android:layout_marginLeft="10dp"
                                 android:layout_toRightOf="@+id/iv_lybuy_photo"
                                 android:text="--"
                                 android:textSize="11sp" />
@@ -192,7 +193,7 @@
                             android:layout_centerInParent="true"
                             android:layout_marginTop="10dp"
                             android:gravity="center"
-                            android:text="点击选择推荐人"
+                            android:text="点击选择服务顾问"
                             android:textColor="#ac0000" />
                     </RelativeLayout>
                 </LinearLayout>
@@ -282,6 +283,7 @@
         android:id="@+id/rl_above_tip"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:background="#fff"
         android:layout_alignParentBottom="true"
         android:orientation="vertical">
 
