--- a/app/src/main/res/layout/item_ly_list_indent.xml
+++ b/app/src/main/res/layout/item_ly_list_indent.xml
@@ -44,36 +44,31 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="10dp"
             android:text="x1" />
 
-        <TextView
-            android:id="@+id/tv_item_listindent_money"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="5dp"
-            android:text="--" />
 
         <TextView
             android:id="@+id/tv_item_listindent_moneys"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_below="@+id/tv_item_listindent_money"
             android:layout_marginRight="5dp"
             android:layout_marginTop="10dp"
             android:text="--" />
     </RelativeLayout>
 
 
-    <ImageView
+    <TextView
         android:id="@+id/iv_over_item_qupingjia"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
+        android:layout_alignEnd="@+id/rl_test"
         android:layout_below="@+id/rl_test"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="@dimen/distance"
-        android:src="@mipmap/quzhifu" />
+        android:layout_marginTop="8dp"
+        android:background="@drawable/shape_red_4dp"
+        android:padding="10dp"
+        android:text="去支付"
+        android:textColor="#fff" />
 </RelativeLayout>
