--- a/app/src/main/res/layout/item_lybuy_shop_car.xml
+++ b/app/src/main/res/layout/item_lybuy_shop_car.xml
@@ -24,7 +24,6 @@
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:paddingBottom="10dp"
             android:paddingTop="5dp">
 
             <LinearLayout
@@ -42,8 +41,8 @@
                 <TextView
                     android:id="@+id/tv_item_lyshopcar_jieshao"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:lines="2"
+                    android:layout_height="match_parent"
+                    android:gravity="bottom"
                     android:text="--" />
             </LinearLayout>
 
